--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                 <td colspan="9" align="left" style="padding: 15px 10px;">
                     <table width=" 100% ">
                         <tr>
-                            <td style="width: 31% ">Товарная накладная имеет продолжение на</td>
-                            <td style="border-bottom:1px solid;width: 20%; "></td>
+                            <td style="width: 28% ">Товарная накладная имеет продолжение на</td>
+                            <td class="underlined" style="width: 20%; "></td>
                             <td style="width: 17%; ">листах, на бланках за №</td>
-                            <td style="border-bottom:1px solid;width: 27%; "></td>
+                            <td class="underlined" style="width: 27%; "></td>
                             <td></td>
                         </tr>
                     </table>
@@ -124,7 +124,7 @@
                     <table width="100% " style="padding: 0 10px; ">
                         <tr>
                             <td style="width: 8% ">И содержит</td>
-                            <td style="border-bottom:1px solid;width: 30%; ">Четыре</td>
+                            <td class="underlined" style="width: 30%; ">Четыре</td>
                             <td style="width: 25%; ">порядковых номера записей</td>
                             <td style="width: 45%; "></td>
                         </tr>
@@ -138,7 +138,7 @@
                 <td colspan="6 " align="left ">
                     <table width="100% ">
                         <tr>
-                            <td style="width: 60%; text-align: center;padding-bottom: 15px;font-size: 12px; ">(прописью)</td>
+                            <td class="comment" style="width: 60%; padding-bottom: 15px">(прописью)</td>
                             <td></td>
                         </tr>
                     </table>
@@ -152,9 +152,9 @@
                     <table width="100% " style="padding: 0 10px; ">
                         <tr>
                             <td style="width: 6% ">Всего наименований</td>
-                            <td style="border-bottom:1px solid;width: 15%; ">Три</td>
+                            <td class="underlined" style="width: 15%; ">Три</td>
                             <td style="width: 7%; ">Масса груза(нетто)</td>
-                            <td style="border-bottom:1px solid;width: 12%;padding-right: 15px; "></td>
+                            <td class="underlined" style="width: 12%;padding-right: 15px; "></td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
@@ -169,9 +169,9 @@
                     <table width="100% " style="padding: 0 10px; ">
                         <tr>
                             <td style="width: 6% "></td>
-                            <td style="width: 20%;text-align: center;padding-bottom: 15px;font-size: 12px;  ">(прописью)</td>
+                            <td class="comment" style="width: 20%;padding-bottom: 15px">(прописью)</td>
                             <td style="width: 7%; "></td>
-                            <td style="width: 12%;text-align: center;padding-bottom: 15px;font-size: 12px; ">(прописью)</td>
+                            <td class="comment" style="width: 12%;padding-bottom: 15px">(прописью)</td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
@@ -185,9 +185,9 @@
                     <table width="100% " style="padding: 0 10px; ">
                         <tr>
                             <td style="width: 5% ">Всего мест</td>
-                            <td style="border-bottom:1px solid;width: 16%; ">Девятнадцать</td>
+                            <td class="underlined" style="width: 16%; ">Девятнадцать</td>
                             <td style="width: 5%; ">Масса груза(брутто)</td>
-                            <td style="border-bottom:1px solid;width: 15%;padding-right: 15px; ">Сорок пять кг</td>
+                            <td class="underlined" style="width: 15%;padding-right: 15px; ">Сорок пять кг</td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
@@ -202,9 +202,9 @@
                     <table width="100% " style="padding: 0 10px; ">
                         <tr>
                             <td style="width: 6% "></td>
-                            <td style="width: 20%;text-align: center;padding-bottom: 15px;font-size: 12px;  ">(прописью)</td>
+                            <td class="comment" style="width: 20%;padding-bottom: 15px">(прописью)</td>
                             <td style="width: 7%; "></td>
-                            <td style="width: 12%;text-align: center;padding-bottom: 15px;font-size: 12px; ">(прописью)</td>
+                            <td class="comment" style="width: 12%;padding-bottom: 15px">(прописью)</td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
@@ -220,14 +220,14 @@
             <table class="left-table-one">
                 <tr>
                     <td style="width: 20% ">Приложение (паспорта, сертификаты и т.п.) на</td>
-                    <td style="border-bottom:1px solid;"></td>
+                    <td class="underlined"></td>
                     <td> листах</td>
-                    <td style="border-bottom:1px solid;width: 12%;padding-right: 15px; "></td>
+                    <td class="underlined" style="width: 12%;padding-right: 15px; "></td>
 
                 </tr>
                 <tr>
                     <td style="width: 20% "></td>
-                    <td style="width: 14%;text-align: center;padding-bottom: 15px;font-size: 12px;  ">(прописью)</td>
+                    <td class="comment" style="width: 14%;padding-bottom: 15px">(прописью)</td>
                     <td style="width: 1%; padding-left: 3px;"> </td>
                     <td style="width: 12%;"></td>
 
@@ -236,15 +236,15 @@
             <table class="left-table-two">
                 <tr>
                     <td style="width: 25%;margin-right: 10px; ">Всего отпущено на сумму</td>
-                    <td style="border-bottom:1px solid;">Двадцать пять тысяч девятьсот восемьдесят</td>
+                    <td class="underlined">Двадцать пять тысяч девятьсот восемьдесят</td>
                     <td style="width: 5%"> руб.</td>
-                    <td style="border-bottom:1px solid;width: 8%">00</td>
+                    <td class="underlined" style="width: 8%">00</td>
                     <td> коп.</td>
 
                 </tr>
                 <tr>
                     <td style="width: 25% "></td>
-                    <td style="text-align: center;padding-bottom: 15px;font-size: 12px; width: 52%; ">(прописью)</td>
+                    <td class="comment" style="padding-bottom: 15px; width: 52%; ">(прописью)</td>
                     <td style="padding-left: 3px;"> </td>
                     <td></td>
                     <td></td>
@@ -260,44 +260,44 @@
                     <td style="width: 10%;"></td>
                 </tr>
                 <tr>
-                    <td style="width: 20%;margin-right: 10px; border-bottom:1px solid;"> Директор</td>
-                    <td style="width: 6%;border-bottom:1px solid;"></td>
-                    <td style="width: 10%;border-bottom:1px solid;">И.И. Иванов</td>
+                    <td class="underlined" style="width: 20%;margin-right: 10px;"> Директор</td>
+                    <td class="underlined" style="width: 6%;"></td>
+                    <td class="underlined" style="width: 10%">И.И. Иванов</td>
                     <td style="font-size: 18px; font-weight: bold;width: 1%;">бухгалтер</td>
-                    <td style="width: 10%;border-bottom:1px solid;" align="left"></td>
-                    <td style="width: 10%;border-bottom:1px solid;margin-left: 5px;">А.П. Сидорова</td>
+                    <td class="underlined" style="width: 10%" align="left"></td>
+                    <td class="underlined" tyle="width: 10%;margin-left: 5px;">А.П. Сидорова</td>
                 </tr>
-                <tr style="text-align: center;">
-                    <td style="width: 20%;margin-right: 10px;font-size: 12px; "> (должность)</td>
-                    <td style="width: 6%;font-size: 12px; ">(подпись)</td>
-                    <td style="width: 10%;font-size: 12px; ">(расшифровка подписи)</td>
-                    <td style="width: 1%;font-size: 12px; "></td>
-                    <td style="width: 10%;font-size: 12px; ">(подпись)</td>
-                    <td style="width: 10%;margin-left: 5px;font-size: 12px; ">(расшифровка подписи)</td>
+                <tr class="comment">
+                    <td style="width: 20%;margin-right: 10px"> (должность)</td>
+                    <td style="width: 6%;">(подпись)</td>
+                    <td style="width: 10%; ">(расшифровка подписи)</td>
+                    <td style="width: 1%;"></td>
+                    <td style="width: 10%;">(подпись)</td>
+                    <td style="width: 10%;margin-left: 5px;">(расшифровка подписи)</td>
                 </tr>
             </table>
             <table class="left-table-four">
                 <tr>
                     <td style="width: 23%;font-size: 18px; font-weight: bold" align="left">Отпуск груза произвел</td>
-                    <td style="border-bottom:1px solid;width: 15%;">Грузчик</td>
-                    <td style="border-bottom:1px solid;"> </td>
-                    <td style="border-bottom:1px solid;width: 15%;text-align: center;">П.П. Петров</td>
+                    <td class="underlined" style="width: 15%;">Грузчик</td>
+                    <td class="underlined"> </td>
+                    <td class="underlined" style="width: 15%;text-align: center;">П.П. Петров</td>
                 </tr>
-                <tr style="text-align: center;">
+                <tr class="comment">
                     <td style="width: 23%;margin-right: 10px; "></td>
-                    <td style="width: 25%;font-size: 12px;">(должность)</td>
-                    <td style="width: 12%;font-size: 12px;"> (подпись)</td>
-                    <td style=" width: 30%;font-size: 12px;">(расшифровка подписи)</td>
+                    <td style="width: 25%">(должность)</td>
+                    <td style="width: 12%"> (подпись)</td>
+                    <td style=" width: 30%">(расшифровка подписи)</td>
                 </tr>
             </table>
             <table class="left-table-five">
                 <tr>
                     <td style="width: 1%;">М.П.</td>
                     <td style="width: 1%;">"</td>
-                    <td style="border-bottom:1px solid;width: 4%;"> </td>
+                    <td class="underlined" style="width: 4%;"> </td>
                     <td style="width: 1%;">"</td>
-                    <td style="border-bottom:1px solid;width: 12%;"> </td>
-                    <td style="border-bottom:1px solid;width: 4%;"> </td>
+                    <td class="underlined" style="width: 12%;"> </td>
+                    <td class="underlined" style="width: 4%;"> </td>
                     <td style="width: 1%;">г.</td>
                 </tr>
             </table>
@@ -306,54 +306,54 @@
             <table class="right-table-one">
                 <tr>
                     <td style="width: 15%;">По доверенности №</td>
-                    <td style="border-bottom:1px solid;width: 10%;"> </td>
+                    <td class="underlined" style="width: 10%;"> </td>
                     <td style="width: 1%;">от</td>
                     <td style="width: 1%;">"</td>
-                    <td style="border-bottom:1px solid;width: 5%;"> </td>
+                    <td class="underlined" style="width: 5%;"> </td>
                     <td style="width: 1%;">"</td>
-                    <td style="border-bottom:1px solid;width: 12%;"> </td>
-                    <td style="border-bottom:1px solid;width: 4%;"> </td>
+                    <td class="underlined" style="width: 12%;"> </td>
+                    <td class="underlined" style="width: 4%;"> </td>
                     <td style="width: 1%;">г.</td>
                 </tr>
             </table>
             <table class="right-table-two">
                 <tr>
                     <td style="width: 5%;">выданной</td>
-                    <td style="border-bottom:1px solid;width: 95%;"> </td>
+                    <td class="underlined" style="width: 95%;"> </td>
                 </tr>
             </table>
             <table class="right-table-three">
                 <tr>
                     <td style="width: 23%" align="left">Груз к перевозке принял</td>
-                    <td style="border-bottom:1px solid;width: 15%;"></td>
-                    <td style="border-bottom:1px solid;"> </td>
-                    <td style="border-bottom:1px solid;width: 15%;text-align: center;"></td>
+                    <td class="underlined" style="width: 15%;"></td>
+                    <td class="underlined"> </td>
+                    <td class="underlined" style="width: 15%;text-align: center;"></td>
                 </tr>
-                <tr style="text-align: center;">
+                <tr class="comment">
                     <td style="width: 23%;margin-right: 10px; "></td>
-                    <td style="width: 20%;font-size: 12px;">(должность)</td>
-                    <td style="width: 10%;font-size: 12px;"> (подпись)</td>
-                    <td style=" width: 20%;font-size: 12px;">(расшифровка подписи)</td>
+                    <td style="width: 20%">(должность)</td>
+                    <td style="width: 10%"> (подпись)</td>
+                    <td style=" width: 20%">(расшифровка подписи)</td>
                 </tr>
             </table>
             <p>(При личном приеме товара по количеству и ассортименту)</p>
             <table class="right-table-four">
                 <tr>
-                    <td style="border-bottom:1px solid black;"> </td>
+                    <td class="underlined"> </td>
                 </tr>
             </table>
             <table class="right-table-five">
                 <tr>
                     <td style="width: 32%" align="left">Груз получил грузополучатель</td>
-                    <td style="border-bottom:1px solid;width: 15%;"></td>
-                    <td style="border-bottom:1px solid;"> </td>
-                    <td style="border-bottom:1px solid;width: 15%;text-align: center;"></td>
+                    <td class="underlined" style="width: 15%;"></td>
+                    <td class="underlined"> </td>
+                    <td class="underlined" style="width: 15%;text-align: center;"></td>
                 </tr>
-                <tr style="text-align: center;">
+                <tr class="comment">
                     <td style="width: 32%;margin-right: 10px; "></td>
-                    <td style="width: 20%;font-size: 12px;">(должность)</td>
-                    <td style="width: 10%;font-size: 12px;"> (подпись)</td>
-                    <td style=" width: 20%;font-size: 12px;">(расшифровка)</td>
+                    <td style="width: 20%">(должность)</td>
+                    <td style="width: 10%"> (подпись)</td>
+                    <td style=" width: 20%">(расшифровка)</td>
                 </tr>
             </table>
         </div>
