--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+    <!-- шапка сайта -->
+
     <header class="container">
         <div class="form-description">
             Типовая межотраслевая форма &#8470;&nbsp;1-Т<br> Утверждена постановлением Госкомстата России<br> от&nbsp;28.11.97 &#8470;&nbsp;78.
@@ -26,7 +29,9 @@
             </tr>
             <tr>
                 <td colspan="2" style="width: 28%;"></td>
-                <td class="heading" style="width: 23%">ТОВАРНО-ТРАНСПОРТНАЯ НАКЛАДНАЯ</td>
+                <td style="width: 23%">
+                    <h1>ТОВАРНО-ТРАНСПОРТНАЯ НАКЛАДНАЯ</h1>
+                </td>
                 <td class="underlined" style="width: 12%;padding-right: 15px "></td>
                 <td style="width: 8%;padding-right: 5px;" align="right">№</td>
                 <td class="table-td" style="width: 8%">00001</td>
@@ -74,6 +79,9 @@
     <section class="commodity-section container">
         <h3 class="commodity-section__header"> 1. ТОВАРНЫЙ РАЗДЕЛ (заполняется грузоотправителем)</h3>
         <table class="commodity-section-table">
+
+            <!-- Основная таблица -->
+
             <tr class="commodity-section-table__heading">
                 <td width="8%">Код продукции (номенкла- турный номер)</td>
                 <td width="8%">Номер прейскуранта и дополнения к нему</td>
@@ -86,7 +94,8 @@
                 <td width="6%">Количест- во мест</td>
                 <td width="7%" align="center">Масса, т</td>
                 <td width="7%">Сумма, руб. коп.</td>
-                <td width="8%">Порядковый номер записи по склад- ской картотеке</td>
+                <td width="8%">Порядковый номер записи по складской картотеке (грузоотправителю, грузополучателю)
+                </td>
             </tr>
             <tr class="commodity-section-table__number">
                 <td>1</td>
@@ -102,7 +111,7 @@
                 <td>11</td>
                 <td>12</td>
             </tr>
-
+            <!-- Часть под таблицей -->
             <tr class="commodity-section-table__after-one">
                 <td colspan="9" align="left" style="padding: 15px 10px;">
                     <table width=" 100% ">
@@ -138,7 +147,7 @@
                 <td colspan="6 " align="left ">
                     <table width="100% ">
                         <tr>
-                            <td class="comment" style="width: 60%; padding-bottom: 15px">(прописью)</td>
+                            <td class="comment" style="width: 60%; padding-bottom: 1%">(прописью)</td>
                             <td></td>
                         </tr>
                     </table>
@@ -149,17 +158,17 @@
             </tr>
             <tr class="commodity-section-table__after-one ">
                 <td colspan="6 " align="left ">
-                    <table width="100% " style="padding: 0 10px; ">
+                    <table width="100% " style="padding: 0 1%; ">
                         <tr>
                             <td style="width: 6% ">Всего наименований</td>
                             <td class="underlined" style="width: 15%; ">Три</td>
                             <td style="width: 7%; ">Масса груза(нетто)</td>
-                            <td class="underlined" style="width: 12%;padding-right: 15px; "></td>
+                            <td class="underlined" style="width: 12%;padding-right: 1%; "></td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
                 </td>
-                <td align="left" style="padding-top: 15px;padding-left: 3px;">т</td>
+                <td align="left" style="padding-top: 1%;padding-left: 3px;">т</td>
                 <td class="table-td " rowspan="2 "></td>
                 <td class="table-td " rowspan="2 "></td>
                 <td></td>
@@ -169,9 +178,9 @@
                     <table width="100% " style="padding: 0 10px; ">
                         <tr>
                             <td style="width: 6% "></td>
-                            <td class="comment" style="width: 20%;padding-bottom: 15px">(прописью)</td>
+                            <td class="comment" style="width: 20%;padding-bottom: 1%">(прописью)</td>
                             <td style="width: 7%; "></td>
-                            <td class="comment" style="width: 12%;padding-bottom: 15px">(прописью)</td>
+                            <td class="comment" style="width: 12%;padding-bottom: 1%">(прописью)</td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
@@ -182,17 +191,17 @@
             </tr>
             <tr class="commodity-section-table__after-one ">
                 <td colspan="6 " align="left ">
-                    <table width="100% " style="padding: 0 10px; ">
+                    <table width="100% " style="padding: 0 1%; ">
                         <tr>
                             <td style="width: 5% ">Всего мест</td>
                             <td class="underlined" style="width: 16%; ">Девятнадцать</td>
                             <td style="width: 5%; ">Масса груза(брутто)</td>
-                            <td class="underlined" style="width: 15%;padding-right: 15px; ">Сорок пять кг</td>
+                            <td class="underlined" style="width: 15%;padding-right: 1%; ">Сорок пять кг</td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
                 </td>
-                <td align="left" style="padding-top: 15px;padding-left: 3px;">т</td>
+                <td align="left" style="padding-bottom: 1%;padding-left: 3px;">т</td>
                 <td class="table-td" rowspan="2 ">Всего к оплате</td>
                 <td class="table-td " rowspan="2 "> 25 980.00</td>
                 <td></td>
@@ -202,9 +211,9 @@
                     <table width="100% " style="padding: 0 10px; ">
                         <tr>
                             <td style="width: 6% "></td>
-                            <td class="comment" style="width: 20%;padding-bottom: 15px">(прописью)</td>
+                            <td class="comment" style="width: 20%;padding-bottom: 1%">(прописью)</td>
                             <td style="width: 7%; "></td>
-                            <td class="comment" style="width: 12%;padding-bottom: 15px">(прописью)</td>
+                            <td class="comment" style="width: 12%;padding-bottom: 1%">(прописью)</td>
                             <td style="width: 3% "></td>
                         </tr>
                     </table>
@@ -222,12 +231,12 @@
                     <td style="width: 20% ">Приложение (паспорта, сертификаты и т.п.) на</td>
                     <td class="underlined"></td>
                     <td> листах</td>
-                    <td class="underlined" style="width: 12%;padding-right: 15px; "></td>
+                    <td class="underlined" style="width: 12%;padding-right: 1%; "></td>
 
                 </tr>
                 <tr>
                     <td style="width: 20% "></td>
-                    <td class="comment" style="width: 14%;padding-bottom: 15px">(прописью)</td>
+                    <td class="comment" style="width: 14%;padding-bottom: 1%">(прописью)</td>
                     <td style="width: 1%; padding-left: 3px;"> </td>
                     <td style="width: 12%;"></td>
 
@@ -235,7 +244,7 @@
             </table>
             <table class="left-table-two">
                 <tr>
-                    <td style="width: 25%;margin-right: 10px; ">Всего отпущено на сумму</td>
+                    <td style="width: 25%;margin-right: 5px; ">Всего отпущено на сумму</td>
                     <td class="underlined">Двадцать пять тысяч девятьсот восемьдесят</td>
                     <td style="width: 5%"> руб.</td>
                     <td class="underlined" style="width: 8%">00</td>
@@ -244,7 +253,7 @@
                 </tr>
                 <tr>
                     <td style="width: 25% "></td>
-                    <td class="comment" style="padding-bottom: 15px; width: 52%; ">(прописью)</td>
+                    <td class="comment" style="padding-bottom: 1%; width: 52%; ">(прописью)</td>
                     <td style="padding-left: 3px;"> </td>
                     <td></td>
                     <td></td>
@@ -252,18 +261,26 @@
             </table>
             <table class="left-table-three">
                 <tr>
-                    <td style="width: 20%;margin-right: 10px;font-size: 18px; font-weight: bold; "> Отпуск разрешил</td>
+                    <td style="width: 20%;margin-right: 10px;">
+                        <h2>Отпуск разрешил</h2>
+                    </td>
                     <td style="width: 6%;"></td>
                     <td style="width: 10%;"></td>
-                    <td style="font-size: 18px; font-weight: bold;width: 1%;">Главный</td>
-                    <td style="width: 10%;font-size: 18px; font-weight: bold;" align="left">(старший)</td>
+                    <td style="width: 1%;">
+                        <h2>Главный</h2>
+                    </td>
+                    <td style="width: 10%" align="left">
+                        <h2>(старший)</h2>
+                    </td>
                     <td style="width: 10%;"></td>
                 </tr>
                 <tr>
                     <td class="underlined" style="width: 20%;margin-right: 10px;"> Директор</td>
                     <td class="underlined" style="width: 6%;"></td>
                     <td class="underlined" style="width: 10%">И.И. Иванов</td>
-                    <td style="font-size: 18px; font-weight: bold;width: 1%;">бухгалтер</td>
+                    <td style="width: 1%;">
+                        <h2>бухгалтер</h2>
+                    </td>
                     <td class="underlined" style="width: 10%" align="left"></td>
                     <td class="underlined" tyle="width: 10%;margin-left: 5px;">А.П. Сидорова</td>
                 </tr>
@@ -278,7 +295,9 @@
             </table>
             <table class="left-table-four">
                 <tr>
-                    <td style="width: 23%;font-size: 18px; font-weight: bold" align="left">Отпуск груза произвел</td>
+                    <td style="width: 23%" align="left">
+                        <h2>Отпуск груза произвел</h2>
+                    </td>
                     <td class="underlined" style="width: 15%;">Грузчик</td>
                     <td class="underlined"> </td>
                     <td class="underlined" style="width: 15%;text-align: center;">П.П. Петров</td>
@@ -305,8 +324,8 @@
         <div class="signatures__right-part">
             <table class="right-table-one">
                 <tr>
-                    <td style="width: 15%;">По доверенности №</td>
-                    <td class="underlined" style="width: 10%;"> </td>
+                    <td style="width: 10%;">По доверенности №</td>
+                    <td class="underlined" style="width: 6%;"> </td>
                     <td style="width: 1%;">от</td>
                     <td style="width: 1%;">"</td>
                     <td class="underlined" style="width: 5%;"> </td>
